fixed buttons on mobile layout

--- a/less/index.less
+++ b/less/index.less
@@ -159,7 +159,12 @@ h1 {
   line-height: 75px;
   color: #ffffff;
 }
+.mainh2 {
+color: #FFFFFF;
+font-size: 2.8rem;
+font-weight: bold;
 
+}
 h2 {
   font-weight: bold;
   font-size: 2.8rem;
@@ -269,10 +274,11 @@ address {
       margin-bottom: 10px;
     }
     .button {
-      max-width: 110px;
+      // max-width: 110px;
       text-align: center;
       padding: 10px 0;
       border: 1px solid #222222;
+      
     }
   }
 }
@@ -295,7 +301,7 @@ address {
     width: 450px;
   }
   .button {
-    max-width: 110px;
+    // max-width: 110px;
     text-align: center;
     padding: 10px 0;
     border: 1px solid #222222;
